chore: add api bluepront rendering tool and commands

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "app:test": "cross-env NODE_PATH=src jest --detectOpenHandles --forceExit",
     "ci-test": "npm run cover -- --reporters=default --reporters=jest-junit --ci",
     "ci-lint": "tslint -p . --force -t checkstyle -o ./output/checkstyle-result.xml",
+    "docs:compile": "snowboard html -o docs-output ./docs/api/api.apib",
+    "docs:start": "snowboard http --watch ./docs/api/api.apib",
     "lint": "tslint -p . -t codeFrame",
     "cover": "npm run app:test -- --collectCoverage",
     "check": "npm-check -i app -i errors -i config -i index; exit 0",
@@ -59,6 +61,7 @@
     "npm-check": "^5.8.0",
     "prettier": "^1.15.1",
     "prettier-config-ackee": "0.0.13",
+    "snowboard": "^3.4.1",
     "supertest": "^4.0.2",
     "supertest-as-promised": "^4.0.2",
     "ts-jest": "^24.0.1",
