--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "configuru": "^0.2.2",
     "cosmas": "^1.1.0",
     "desmond": "^0.5.6",
+    "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
     "node-healthz": "^1.0.1",
     "npm-run-series": "^1.0.1",
