feat(api): answer any riddle

--- a/.env.json
+++ b/.env.json
@@ -3,5 +3,6 @@
     "LOGGER_PRETTY": true,
     "NODE_ENV": "default",
     "ENABLE_TESTS": true,
-    "SERVER_PORT": 3000
+    "SERVER_PORT": 3000,
+    "THE_ANSWER_TO_LIFE_THE_UNIVERSE_AND_EVERYTHING": "It is 42."
 }
