feat(api): answer expressions with defined solver module

--- a/.env.json
+++ b/.env.json
@@ -4,5 +4,6 @@
     "NODE_ENV": "default",
     "ENABLE_TESTS": true,
     "SERVER_PORT": 3000,
-    "THE_ANSWER_TO_LIFE_THE_UNIVERSE_AND_EVERYTHING": "It is 42."
+    "THE_ANSWER_TO_LIFE_THE_UNIVERSE_AND_EVERYTHING": "It is 42.",
+    "EXPRESSION_SOLVER_MODULE": "MathExpressionEvaluator"
 }
