--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "desmond": "^0.5.6",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
+    "math-expression-evaluator": "^1.2.17",
+    "mathjs": "^6.2.2",
     "node-healthz": "^1.0.1",
     "npm-run-series": "^1.0.1",
     "sequelize": "^5.19.0",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/jest": "^24.0.13",
+    "@types/mathjs": "^6.0.2",
     "@types/node": "^12.0.8",
     "@types/supertest-as-promised": "^2.0.36",
     "@types/validator": "^10.11.3",
