--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/basic-auth": "^1.1.2",
     "@types/express": "^4.16.1",
     "@types/lodash": "^4.14.138",
+    "ajv": "^6.10.2",
     "basic-auth": "^2.0.1",
     "compose-middleware": "^5.0.1",
     "configuru": "^0.2.2",
