chore(dependencies): update cosmas

--- a/.env.json
+++ b/.env.json
@@ -1,5 +1,5 @@
 {
-    "LOGGER_DEFAULT_LEVEL": "info",
+    "LOGGER_DEFAULT_LEVEL": "debug",
     "LOGGER_PRETTY": true,
     "NODE_ENV": "default",
     "ENABLE_TESTS": true,
