--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "basic-auth": "^2.0.1",
     "compose-middleware": "^5.0.1",
     "configuru": "^0.2.2",
-    "cosmas": "^1.1.0",
+    "cosmas": "^2.0.0-rc.2",
     "desmond": "^0.5.6",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
