feat(api): Validate request payload with openapi schema

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "app:test": "cross-env NODE_PATH=src jest --detectOpenHandles --forceExit",
     "ci-test": "npm run cover -- --reporters=default --reporters=jest-junit --ci",
     "ci-lint": "tslint -p . --force -t checkstyle -o ./output/checkstyle-result.xml",
-    "docs:compile": "snowboard html -o docs-output ./docs/api/api.apib",
-    "docs:start": "snowboard http --watch ./docs/api/api.apib",
+    "docs:validate": "npx swagger-cli validate ./docs/openapi.yaml",
+    "docs:compile": "npx swagger-cli bundle ./docs/openapi.yaml -r -o ./docs/openapi.json",
     "lint": "tslint -p . -t codeFrame",
     "cover": "npm run app:test -- --collectCoverage",
     "check": "npm-check -i app -i errors -i config -i index; exit 0",
@@ -52,6 +52,8 @@
     "sequelize": "^5.19.0",
     "source-map-support": "^0.5.13",
     "sqlite3": "^4.1.0",
+    "swagger-cli": "^3.0.1",
+    "swagger-parser": "^8.0.4",
     "tsc-watch": "^2.4.0",
     "unicore": "^0.1.7"
   },
